--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/netinfo": "^5.9.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "axios": "^0.21.1",
     "date-fns": "^2.16.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
@@ -23,6 +26,7 @@
     "react-native-screens": "^2.17.1",
     "react-native-vector-icons": "^8.0.0",
     "realm": "^10.1.4",
+    "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2"
   },
