--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "pod:install": "cd ios && pod install && cd .."
   },
   "dependencies": {
+    "@nozbe/watermelondb": "^0.22.0",
+    "@nozbe/with-observables": "^1.4.0",
     "@react-native-async-storage/async-storage": "^1.13.4",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.10",
@@ -26,13 +28,13 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-vector-icons": "^8.1.0",
-    "realm": "^10.6.0",
     "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^25.1.0",
